--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,6 +16,12 @@
                     <h2 class="card-title text-center mb-4">Регистрация</h2>
 
                     <form th:action="@{/register}" th:object="${user}" method="post">
+
+                        <div th:if="${error}" class="alert alert-danger alert-dismissible fade show">
+                            <span th:text="${error}"></span>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+
                         <!-- Логин -->
                         <div class="mb-3">
                             <label for="username" class="form-label">
@@ -31,10 +37,21 @@
                             <label for="phone" class="form-label">
                                 <i class="bi bi-telephone"></i> Телефон
                             </label>
-                            <input type="tel" class="form-control" id="phone"
-                                   th:field="*{phone}"
-                                   placeholder="+7 (XXX) XXX-XX-XX" required>
+                            <div class="input-group input-group-sm">
+                                <span class="input-group-text">+7</span>
+                                <input type="tel" class="form-control" id="phone"
+                                       th:field="*{phone}"
+                                       placeholder="9990009900" required>
+                            </div>
                         </div>
+
+<!--                        <div class="input-group input-group-sm mb-3">-->
+<!--                            <span class="input-group-text">Номер поезда:</span>-->
+<!--                            <input type="text" class="form-control"-->
+<!--                                   id="number" name="number"-->
+<!--                                   th:value="${train != null} ? ${train.number} : ''"-->
+<!--                                   required>-->
+<!--                        </div>-->
 
                         <!-- Email -->
                         <div class="mb-3">
@@ -67,11 +84,7 @@
                             <a th:href="@{/login}" class="btn btn-link">Войти</a>
                         </div>
 
-                        <!-- Сообщение об ошибке -->
-                        <div th:if="${error}" class="alert alert-danger mt-3" role="alert">
-                            <i class="bi bi-exclamation-triangle"></i>
-                            <span th:text="${error}"></span>
-                        </div>
+
                     </form>
                 </div>
             </div>
