--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -14,6 +14,11 @@
     <div class="container mt-5 mb-5">
         <h2><i class="bi bi-table"></i> Таблица пользователей</h2>
 
+        <div th:if="${error}" class="alert alert-danger alert-dismissible fade show">
+            <span th:text="${error}"></span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
         <div class="card shadow">
             <table class="table">
                 <thead>
@@ -53,9 +58,7 @@
                                 </select>
                             </div>
                             <div class="col-md-4">
-                                <button type="submit" class="btn btn-sm btn-success w-100">
-                                    <i class="bi bi-check-lg"></i> Применить
-                                </button>
+                                <button type="submit" class="btn btn-sm btn-success w-100">Применить</button>
                             </div>
                         </form>
                     </td>
