--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/style.css">
-
-
 </head>
+
 <body class="bg-dark text-light">
     <div class="jumbotron jumbotron-fluid"
          style="background: url('/train3.jpg') no-repeat center center;
@@ -100,12 +99,12 @@
 
                 <!-- Кнопка "Сбросить" справа -->
                 <a th:href="@{/(fromCity=${param.fromCity}, toCity=${param.toCity}, departureDate=${param.departureDate})}"
-                   class="btn btn-outline-primary ms-2">Сбросить</a>
+                   class="btn btn-outline-light ms-2">Сбросить</a>
             </div>
         </form>
 
     <div class="card shadow mt-4">
-        <table class="table">
+        <table class="table table-hover">
             <thead>
             <tr>
                 <th>Номер поезда</th>
@@ -144,7 +143,6 @@
                         <div class="text-muted small" th:text="${train.arrivalDate} ?: 'Главный вокзал'"></div>
                     </td>
 
-<!--                    <td th:text="${train.platform}"></td>-->
                     <td>
                         <div sec:authorize="hasRole('ADMIN')">
                             <form th:action="@{/update-form/{id}(id=${train.id})}" method="get" style="display: inline;">
