--- a/src/main/resources/templates/stats.html
+++ b/src/main/resources/templates/stats.html
@@ -36,6 +36,7 @@
         </div>
     </div>
 </div>
+<div th:replace="~{fragments/footer}"></div>
 
 <script th:inline="javascript">
         // Получаем данные из модели
