--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,6 +61,11 @@
                             </a>
                         </div>
                     </form>
+                    <div th:if="${error}" class="alert alert-danger alert-dismissible fade show">
+                        <span th:text="${error}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+
                 </div>
             </div>
         </div>
