--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход в систему</title>
-    <!-- Только подключение Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body class="bg-dark text-light">
 <div class="container d-flex align-items-center justify-content-center min-vh-100">
     <div class="col-md-6 col-lg-5">
@@ -51,7 +50,6 @@
         </div>
     </div>
 </div>
-<!-- Подключение JS Bootstrap (необязательно для формы) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>-->
 </body>
 </html>
