--- a/src/main/resources/templates/control/add-train.html
+++ b/src/main/resources/templates/control/add-train.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Новый поезд</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body class="bg-dark text-light">
     <div th:replace="~{fragments/navbar}"></div>
