--- a/src/main/resources/templates/control/update-train.html
+++ b/src/main/resources/templates/control/update-train.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Изменить поезд</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="bg-dark text-light">
 <div th:replace="~{fragments/navbar}"></div>
@@ -13,7 +14,7 @@
 <div class="container">
     <div class="row justify-content-center mt-5">
         <div class="col-md-6 col-lg-6">
-            <div class="card shadow">
+            <div class="card shadow mt-5">
                 <div class="card-body p-4">
                     <h2 class="card-title text-center mb-4">Изменить поезд</h2>
 
