--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,16 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
+<body>
 <footer class="bg-dark text-white pt-4 pb-3 mt-auto">
     <div class="container-fluid">
         <div class="row">
-            <div class="d-flex justify-content-between pt-3 mt-3 border-top border-secondary">
-
             <!-- Логотип и описание -->
             <div class="col-md-4 mb-3">
                 <a class="navbar-brand text-white" href="/">
@@ -33,6 +41,8 @@
                     <a href="https://github.com/MorozovaAnastasiaa" target="_blank" class="text-white me-2"><i class="bi bi-github"></i></a>
                 </div>
             </div>
+
         </div>
     </div>
 </footer>
+</body>
