--- a/src/main/resources/templates/main/about.html
+++ b/src/main/resources/templates/main/about.html
@@ -5,6 +5,7 @@
     <title>Об авторе</title>
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="bg-dark text-light">
 <div th:replace="~{fragments/navbar}"></div>
@@ -55,10 +56,10 @@
                         <div class="ps-3">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <p><strong>Начало:</strong> 29 апреля 2025 г.</p>
+                                    <p><strong>Начало:</strong> 25 апреля 2025 г.</p>
                                 </div>
                                 <div class="col-md-6">
-                                    <p><strong>Завершение:</strong> 15 мая 2025 г.</p>
+                                    <p><strong>Завершение:</strong> 22 мая 2025 г.</p>
                                 </div>
                             </div>
                         </div>
