--- a/src/main/resources/templates/main/admin-panel.html
+++ b/src/main/resources/templates/main/admin-panel.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Админка</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="bg-dark text-light">
     <div th:replace="~{fragments/navbar}"></div>
@@ -26,6 +25,7 @@
                 <th>Телефон</th>
                 <th>Почта</th>
                 <th>Роль</th>
+                <th></th>
                 </thead>
                 <tbody>
                 <tr th:each="user : ${users}">
