--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -8,7 +8,8 @@
     <title>Расписание поездов</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 
 <body class="bg-dark text-light">
@@ -108,7 +109,7 @@
             </div>
         </form>
 
-    <div class="card shadow mt-4">
+    <div class="card shadow mt-4 mb-5">
         <table class="table table-hover">
             <thead>
             <tr>
