--- a/src/main/resources/templates/main/stats.html
+++ b/src/main/resources/templates/main/stats.html
@@ -5,6 +5,7 @@
     <title>Статистика</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="bg-dark text-light">
 <div th:replace="~{fragments/navbar}"></div>
@@ -25,7 +26,7 @@
     </div>
 
     <!-- Блок с популярными направлениями -->
-    <div class="card">
+    <div class="card mb-5">
         <div class="card-header">
             <h2>Популярные направления</h2>
         </div>
@@ -56,7 +57,8 @@
                     datasets: [{
                         label: 'Количество поездов',
                         data: data,
-                        borderWidth: 1
+                        borderWidth: 1,
+                        backgroundColor: 'rgba(69, 146, 8, 0.6)'
                     }]
                 },
                 options: {
